--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nisha-portfolio",
   "version": "0.1.0",
-  "homepage":"https://neilrathi17.github.io/nisha-portfolio/canvas",
+  "homepage":"https://neilrathi17.github.io/nisha-portfolio/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -26,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "master -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
