--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nisha-portfolio",
   "version": "0.1.0",
   "homepage":"https://neilrathi17.github.io/nisha-portfolio/",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
